--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -16,7 +16,7 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="input-full-width">
-        <mat-label>{{"user.form.passowrd" | translate}}</mat-label>
+        <mat-label>{{"user.form.password" | translate}}</mat-label>
         <input
           autocomplete="off"
           matInput
@@ -24,11 +24,11 @@
           (keyup.enter)="login()"
         />
         <mat-error *ngIf="hasError('passwordFormControl','minlength')">
-          {{"user.form.passowrd" | translate}}
+          {{"user.form.password" | translate}}
           {{"user.form_validations.must_be_at_least_4_characters_long" | translate}}.
         </mat-error>
         <mat-error *ngIf="hasError('passwordFormControl','required')">
-          {{"user.form.passowrd" | translate}} {{"user.form_validations.is_required" | translate}}
+          {{"user.form.password" | translate}} {{"user.form_validations.is_required" | translate}}
         </mat-error>
       </mat-form-field>
     </form>
