--- a/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
+++ b/src/app/features/admin-management/user-components/view-user-order/view-user-order.component.html
@@ -28,30 +28,40 @@
                   <div fxFlex="80%">
                     <table mat-table [dataSource]="order.products">
                       <ng-container matColumnDef="number">
-                        <th mat-header-cell *matHeaderCellDef>No</th>
+                        <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                          {{"admin.table.no" | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element">
                           {{increment()}}
                         </td>
                       </ng-container>
                       <ng-container matColumnDef="image">
-                        <th mat-header-cell *matHeaderCellDef>Image</th>
+                        <th mat-header-cell *matHeaderCellDef>
+                          {{"admin.table.image" | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element">
                           <img class="product-image" src="{{ element.image }}" />
                         </td>
                       </ng-container>
 
                       <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef>Name</th>
+                        <th mat-header-cell *matHeaderCellDef>
+                          {{"admin.table.name" | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element">{{element.name}}</td>
                       </ng-container>
 
                       <ng-container matColumnDef="price">
-                        <th mat-header-cell *matHeaderCellDef>Price</th>
+                        <th mat-header-cell *matHeaderCellDef>
+                          {{"admin.table.price" | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element">{{element.price}}</td>
                       </ng-container>
 
                       <ng-container matColumnDef="quantity">
-                        <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                        <th mat-header-cell *matHeaderCellDef style="width: 20%;">
+                          {{"admin.table.quantity" | translate}}
+                        </th>
                         <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
                       </ng-container>
 
