--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -1,40 +1,46 @@
 <div class="billing-container">
   <mat-card class="edit-profile-card">
-    <mat-card-title>Enter Billing Details</mat-card-title>
+    <mat-card-title>
+      {{"user.form_heading.enter_billing_details" | translate}}
+    </mat-card-title>
     <mat-card-content>
       <form [formGroup]="billingform">
         <table class="table-full-width" cellspacing="0">
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Name</mat-label>
+                <mat-label>{{"user.form.name" | translate}} </mat-label>
                 <input autocomplete="off" required matInput formControlName="nameFormControl" />
                 <mat-error *ngIf="hasError('nameFormControl','minlength')">
-                  Name must be at least 3 characters long.
+                  {{"user.form.name" | translate}}
+                  {{"user.form_validations.must_be_at_least_3_characters_long" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('nameFormControl','required')">
-                  Name is <strong>required</strong>
+                  {{"user.form.name" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
-                <mat-label>LastName</mat-label>
+                <mat-label>{{"user.form.lastname" | translate}}</mat-label>
                 <input autocomplete="off" required matInput formControlName="LastnameFormControl" />
                 <mat-error *ngIf="hasError('LastnameFormControl','required')">
-                  Name is <strong>required</strong>
+                  {{"user.form.lastname" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
-                <mat-label>Email</mat-label>
+                <mat-label>{{"user.form.email" | translate}}</mat-label>
                 <input autocomplete="off" required matInput formControlName="emailFormControl" />
                 <mat-error *ngIf="hasError('emailFormControl','email')">
-                  Please enter a valid email address
+                  {{"user.form_validations.please_enter_a_valid_email_address" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('emailFormControl','required')">
-                  Email is <strong>required</strong>
+                  {{"user.form.email" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
               </mat-form-field>
             </td>
@@ -45,16 +51,17 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Address Line 1</mat-label>
+                <mat-label>{{"user.form.adress_line_1" | translate}}</mat-label>
                 <input autocomplete="off" required matInput formControlName="address1FormControl" />
                 <mat-error *ngIf="hasError('address1FormControl','required')">
-                  Address is <strong>required</strong>
+                  {{"user.form.adress_line_1" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Address Line 2</mat-label>
+                <mat-label>{{"user.form.adress_line_2" | translate}}</mat-label>
                 <input autocomplete="off" matInput formControlName="address2FormControl" />
               </mat-form-field>
             </td>
@@ -65,33 +72,33 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Country</mat-label>
+                <mat-label>{{"user.form.country" | translate}}</mat-label>
                 <mat-select required formControlName="selectedcountry">
                   <mat-option *ngFor="let country of country" [value]="country.name">
                     {{ country.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="hasError('selectedcountry','required')"
-                  >You must make a selection</mat-error
-                >
+                <mat-error *ngIf="hasError('selectedcountry','required')">
+                  {{"user.form_validations.you_must_make_a_selection" | translate}}
+                </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
-                <mat-label>State</mat-label>
+                <mat-label>{{"user.form.state" | translate}}</mat-label>
                 <mat-select required formControlName="selectedstate">
                   <mat-option *ngFor="let state of state" [value]="state.name">
                     {{ state.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="hasError('selectedstate','required')"
-                  >You must make a selection</mat-error
-                >
+                <mat-error *ngIf="hasError('selectedstate','required')">
+                  {{"user.form_validations.you_must_make_a_selection" | translate}}
+                </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
-                <mat-label>Pin Code</mat-label>
+                <mat-label>{{"user.form.pincode" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   required
@@ -100,11 +107,13 @@
                   #pinCode
                   placeholder="Ex. 94105"
                 />
-                <mat-error *ngIf=" hasError('PincodeFormControl','maxlength') ">
-                  Pin Code must be of 6 digits
+                <mat-error *ngIf="hasError('PincodeFormControl','maxlength')">
+                  {{"user.form.pincode" | translate}} {{"user.form_validations.must_be_of_6_digits"
+                  | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('PincodeFormControl','required')">
-                  Pin Code is <strong>required</strong>
+                  {{"user.form.pincode" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
                 <mat-hint align="end">{{ pinCode.value.length }} / 6 </mat-hint>
               </mat-form-field>
@@ -117,6 +126,6 @@
 </div>
 <div class="checkout-button">
   <button mat-raised-button color="warn" [disabled]="billingform.invalid" (click)="goForward()">
-    Confirm And Continue
+    {{"user.form.confirm_and_continue" | translate}}
   </button>
 </div>
