--- a/src/app/features/cart-management/checkout/checkout.component.html
+++ b/src/app/features/cart-management/checkout/checkout.component.html
@@ -1,22 +1,30 @@
 <app-navbar [isHidden]="true"></app-navbar>
-<app-jumbotron [Heading]="heading"></app-jumbotron>
+<app-jumbotron [Heading]="'user.main_heading.checkout_form'"></app-jumbotron>
 <mat-horizontal-stepper [linear]="isLinear" #stepper>
   <mat-step [completed]="step1" [editable]="false">
-    <ng-template matStepLabel>Fill out your Billing Address</ng-template>
+    <ng-template matStepLabel>
+      {{"user.form_heading.fill_out_your_billing_address" | translate}}
+    </ng-template>
     <app-billing (step1status)="setstep1status($event)"></app-billing>
   </mat-step>
   <mat-step [completed]="step2" [editable]="false">
-    <ng-template matStepLabel>Fill out your address</ng-template>
+    <ng-template matStepLabel>
+      {{"user.form_heading.fill_out_your_address" | translate}}
+    </ng-template>
     <app-payment (step2status)="setstep2status($event)"></app-payment>
   </mat-step>
   <mat-step [completed]="false" [editable]="false">
-    <ng-template matStepLabel>Success</ng-template>
+    <ng-template matStepLabel>
+      {{"user.form_heading.sucess" | translate}}
+    </ng-template>
     <div class="success-card-wrapper">
-      <mat-card class="success-card">Order Is Placed Successfully</mat-card>
+      <mat-card class="success-card">
+        {{"user.form_heading.order_is_placed_successfully" | translate}}
+      </mat-card>
     </div>
     <div class="checkout-button">
       <button mat-raised-button color="warn" [routerLink]="['/home']">
-        Continue Shopping
+        {{"user.cart.continue_shopping" | translate}}
       </button>
     </div>
   </mat-step>
