--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -20,45 +20,47 @@
   <div class="col-lg-6"> -->
 <div class="edit-container">
   <mat-card class="edit-profile-card">
-    <mat-card-title>Edit Profile details</mat-card-title>
+    <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
     <br />
     <mat-card-content>
       <form [formGroup]="editform">
         <mat-form-field appearance="outline">
-          <mat-label>Username</mat-label>
+          <mat-label>{{"user.form.username" | translate}}</mat-label>
           <input autocomplete="off" matInput formControlName="usernameFormControl" />
           <mat-error *ngIf="hasError('usernameFormControl','minlength')">
-            Name must be at least 3 characters long.
+            {{"user.form.username" | translate}} must be at least 3 characters long.
           </mat-error>
           <mat-error *ngIf="hasError('usernameFormControl','required')">
-            Username is <strong>required</strong>
+            {{"user.form.username" | translate}} {{"user.form_validations.is_required" | translate}}
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
+          <mat-label>{{"user.form.email" | translate}}</mat-label>
           <input autocomplete="off" matInput formControlName="emailFormControl" />
-          <mat-error *ngIf="hasError('usernameFormControl','email')">
-            Please enter a valid email address
+          <mat-error *ngIf="hasError('emailFormControl','email')">
+            {{"user.form_validations.please_enter_a_valid_email_address" | translate}}
           </mat-error>
-          <mat-error *ngIf="hasError('usernameFormControl','required')">
-            Email is <strong>required</strong>
+          <mat-error *ngIf="hasError('emailFormControl','required')">
+            {{"user.form.email" | translate}} {{"user.form_validations.is_required" | translate}}
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Profile Pic</mat-label>
+          <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
           <input autocomplete="off" matInput formControlName="photoFormControl" />
           <mat-error *ngIf="hasError('photoFormControl','required')">
-            Profile Pic is <strong>required</strong>
+            {{"user.form.profile_pic" | translate}} {{"user.form_validations.is_required" |
+            translate}}
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>{{"user.form.password" | translate}}</mat-label>
           <input autocomplete="off" matInput formControlName="passwordFormControl" />
           <mat-error *ngIf="hasError('passwordFormControl','minlength')">
-            Password must be at least 4 characters long.
+            {{"user.form.password" | translate}}
+            {{"user.form_validations.must_be_at_least_4_characters_long" | translate}}
           </mat-error>
           <mat-error *ngIf="hasError('passwordFormControl','required')">
-            Password is <strong>required</strong>
+            {{"user.form.password" | translate}} {{"user.form_validations.is_required" | translate}}
           </mat-error>
         </mat-form-field>
       </form>
@@ -70,11 +72,11 @@
 </div>
 <mat-toolbar color="primary" class="edit-footer">
   <button mat-raised-button [disabled]="editform.invalid" (click)="save()">
-    Save
+    {{"user.form.save" | translate}}
   </button>
   &nbsp; &nbsp; &nbsp; &nbsp;
 
   <button mat-raised-button (click)="cancel()" color="warn">
-    Cancel
+    {{"user.form.cancel" | translate}}
   </button>
 </mat-toolbar>
