--- a/src/app/features/user-management/profile/view-profile/view-profile.component.html
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="40%">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Profile Pic</mat-card-title>
+        <mat-card-title>{{"user.form.profile_pic" | translate}}</mat-card-title>
       </mat-card-header>
       <div class="profile-image">
         <img
@@ -19,22 +19,22 @@
   </div>
   <div fxFlex="60%">
     <mat-card class="profile-card">
-      <mat-card-title>Profile details</mat-card-title>
+      <mat-card-title>{{"user.form_heading.profile_details" | translate}}</mat-card-title>
       <mat-card-content>
         <mat-form-field appearance="outline">
-          <mat-label>Username</mat-label>
+          <mat-label>{{"user.form.username" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.name }}" />
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
+          <mat-label>{{"user.form.email" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.email }}" />
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>{{"user.form.password" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="value" />
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>ProfilePic</mat-label>
+          <mat-label>{{"user.form.profile_pic" | translate}}</mat-label>
           <input autocomplete="off" matInput readonly value="{{ userdata?.photoUrl }}" />
         </mat-form-field>
       </mat-card-content>
