--- a/src/app/features/user-management/view-orders/view-orders.component.html
+++ b/src/app/features/user-management/view-orders/view-orders.component.html
@@ -15,37 +15,39 @@
         </mat-expansion-panel-header>
         <table mat-table [dataSource]="order.products">
           <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef>No</th>
+            <th mat-header-cell *matHeaderCellDef style="width: 15%;">
+              {{"user.product.no" | translate}}
+            </th>
             <td mat-cell *matCellDef="let element">
               {{increment()}}
             </td>
           </ng-container>
           <ng-container matColumnDef="image">
-            <th mat-header-cell *matHeaderCellDef>Image</th>
+            <th mat-header-cell *matHeaderCellDef>{{"user.product.image" | translate}}</th>
             <td mat-cell *matCellDef="let element">
               <img class="product-image" src="{{ element.image }}" />
             </td>
           </ng-container>
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <th mat-header-cell *matHeaderCellDef>{{"user.product.name" | translate}}</th>
             <td mat-cell *matCellDef="let element">{{element.name}}</td>
           </ng-container>
 
           <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef>Price</th>
+            <th mat-header-cell *matHeaderCellDef>{{"user.product.price" | translate}}</th>
             <td mat-cell *matCellDef="let element">{{element.price}}</td>
           </ng-container>
 
           <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
+            <th mat-header-cell *matHeaderCellDef>{{"user.product.quantity" | translate}}</th>
             <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
           </ng-container>
 
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef style="width: 100px;">
               <button class="cancel-btn" mat-raised-button color="warn">
-                Cancel this order
+                {{"user.product.cancel_this_order" | translate}}
                 <mat-icon>cancel</mat-icon>
               </button>
             </th>
