--- a/src/app/features/admin-management/user-components/block-user/block-user.component.html
+++ b/src/app/features/admin-management/user-components/block-user/block-user.component.html
@@ -10,8 +10,9 @@
         [iconname]="'block'"
         (action)="onBlockUser()"
         [disabled]="isDisabled"
-        [matTooltip]="'app.examples.todos.tooltip.remove' | translate"
-        matTooltipPosition="after"
+        matTooltip="{{'tooltip.block' | translate}}"
+        [matTooltipShowDelay]="1000"
+        matTooltipPosition="below"
       >
       </app-big-input-action>
     </app-big-input>
