--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -73,7 +73,13 @@
                 &nbsp; {{"admin.table.action" | translate}}
               </th>
               <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="warn" (click)="blockuser(element)">
+                <button
+                  mat-icon-button
+                  color="warn"
+                  matTooltip="{{'tooltip.block' | translate}}"
+                  matTooltipPosition="right"
+                  (click)="blockuser(element)"
+                >
                   <mat-icon>block</mat-icon>
                 </button>
               </td>
