--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -10,11 +10,25 @@
       [radius]="5"
     >
       <div class="btn">
-        <button mat-raised-button color="accent" (click)="onAddToBuyList()" [disabled]="isDisabled">
+        <button
+          mat-raised-button
+          color="accent"
+          matTooltip="{{'tooltip.add_item' | translate}}"
+          matTooltipPosition="above"
+          (click)="onAddToBuyList()"
+          [disabled]="isDisabled"
+        >
           <mat-icon>add</mat-icon>
         </button>
         &nbsp;&nbsp;
-        <button mat-raised-button color="warn" (click)="onRemoveItem()" [disabled]="isSelected">
+        <button
+          mat-raised-button
+          color="warn"
+          matTooltip="{{'tooltip.delete_item' | translate}}"
+          matTooltipPosition="above"
+          (click)="onRemoveItem()"
+          [disabled]="isSelected"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </div>
@@ -24,7 +38,12 @@
   <ng-container *ngIf="list && show">
     <div class="buy-card-container">
       <div class="filter-btn">
-        <button mat-icon-button [matMenuTriggerFor]="todosFilter">
+        <button
+          mat-icon-button
+          matTooltip="{{'tooltip.filter' | translate}}"
+          matTooltipPosition="left"
+          [matMenuTriggerFor]="todosFilter"
+        >
           <mat-icon>filter_list</mat-icon>
         </button>
         <mat-chip-list>
