--- a/src/app/features/cart-management/checkout/billing/billing.component.html
+++ b/src/app/features/cart-management/checkout/billing/billing.component.html
@@ -124,8 +124,13 @@
     </mat-card-content>
   </mat-card>
 </div>
-<div class="checkout-button">
+<!-- <div class="checkout-button">
   <button mat-raised-button color="warn" [disabled]="billingform.invalid" (click)="goForward()">
     {{"user.form.confirm_and_continue" | translate}}
   </button>
-</div>
+</div> -->
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right checkout-button">
+  <button mat-raised-button color="warn" [disabled]="billingform.invalid" (click)="goForward()">
+    {{"user.form.confirm_and_continue" | translate}}
+  </button>
+</mat-toolbar>
