--- a/src/app/features/cart-management/checkout/checkout.component.scss
+++ b/src/app/features/cart-management/checkout/checkout.component.scss
@@ -15,5 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 20px;
+  .order-button {
+    width: 30%;
+  }
 }
