--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.scss
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.scss
@@ -34,3 +34,8 @@
   display: flex;
   justify-content: center;
 }
+.total-card {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(103, 58, 183, 0.25);
+}
