--- a/src/app/features/admin-management/product-components/update-product/update/update.component.html
+++ b/src/app/features/admin-management/product-components/update-product/update/update.component.html
@@ -1,4 +1,4 @@
-<app-jumbotron [Heading]="'UPDATE-PRODUCT'"></app-jumbotron>
+<app-jumbotron [Heading]="'admin.main_heading.updateproduct'"></app-jumbotron>
 <div class="billing-container">
   <mat-card class="edit-profile-card">
     <mat-card-content>
@@ -7,7 +7,7 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Category</mat-label>
+                <mat-label>{{"admin.productform.category" | translate}}</mat-label>
                 <mat-select
                   required
                   formControlName="selectedcategory"
@@ -18,14 +18,14 @@
                     {{ category.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="hasError('selectedcategory','required')"
-                  >You must make a selection</mat-error
-                >
+                <mat-error *ngIf="hasError('selectedcategory','required')">
+                  {{"admin.productform_validations.you_must_make_a_selection" |translate}}
+                </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline" class="example-full-width">
-                <mat-label>InnerCategory</mat-label>
+                <mat-label>{{"admin.productform.innercategory" | translate}}</mat-label>
                 <mat-select
                   required
                   [(ngModel)]="productdata.innercategory"
@@ -38,9 +38,9 @@
                     {{ innerCategory.name }}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="hasError('selectedinnerCategory','required')"
-                  >You must make a selection</mat-error
-                >
+                <mat-error *ngIf="hasError('selectedinnerCategory','required')">
+                  {{"admin.productform_validations.you_must_make_a_selection" |translate}}
+                </mat-error>
               </mat-form-field>
             </td>
           </tr>
@@ -50,7 +50,7 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Product Name</mat-label>
+                <mat-label>{{"admin.productform.product_name" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   [(ngModel)]="productdata.name"
@@ -59,7 +59,8 @@
                   formControlName="productNameFormControl"
                 />
                 <mat-error *ngIf="hasError('productNameFormControl','required')">
-                  Product Name {{"user.form_validations.is_required" | translate}}
+                  {{"admin.productform.product_name" | translate}}
+                  {{"user.form_validations.is_required" | translate}}
                 </mat-error>
               </mat-form-field>
             </td>
@@ -70,7 +71,7 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Quantity</mat-label>
+                <mat-label>{{"admin.productform.quantity" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   [(ngModel)]="productdata.quantity"
@@ -79,19 +80,20 @@
                   formControlName="quantityFormControl"
                 />
                 <mat-error *ngIf="hasError('quantityFormControl','min')">
-                  Enter Positive <strong>value</strong>
+                  {{"admin.productform_validations.enter_positive_value" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('quantityFormControl','pattern')">
-                  Enter valid <strong>value</strong>
+                  {{"admin.productform_validations.enter_valid_value" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('quantityFormControl','required')">
-                  Quantity {{"user.form_validations.is_required" | translate}}
+                  {{"admin.productform.quantity" | translate}} {{"user.form_validations.is_required"
+                  | translate}}
                 </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Price</mat-label>
+                <mat-label>{{"admin.productform.price" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   [(ngModel)]="productdata.price"
@@ -100,13 +102,14 @@
                   formControlName="priceFormControl"
                 />
                 <mat-error *ngIf="hasError('priceFormControl','min')">
-                  Enter Positive <strong>value</strong>
+                  {{"admin.productform_validations.enter_positive_value" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('priceFormControl','pattern')">
-                  Enter valid <strong>value</strong>
+                  {{"admin.productform_validations.enter_valid_value" | translate}}
                 </mat-error>
                 <mat-error *ngIf="hasError('priceFormControl','required')">
-                  Price {{"user.form_validations.is_required" | translate}}
+                  {{"admin.productform.price" | translate}} {{"user.form_validations.is_required" |
+                  translate}}
                 </mat-error>
               </mat-form-field>
             </td>
@@ -117,15 +120,20 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Product Description</mat-label>
+                <mat-label>{{"admin.productform.product_description" | translate}}</mat-label>
                 <textarea
                   matInput
                   required
                   [(ngModel)]="productdata.description"
                   formControlName="productDescriptionFormControl"
                 ></textarea>
+                <mat-error *ngIf="hasError('productDescriptionFormControl','minlength')">
+                  {{"admin.productform.product_description" | translate}}
+                  {{"admin.productform_validations.must_have_minimum_10_characters" | translate}}
+                </mat-error>
                 <mat-error *ngIf="hasError('productDescriptionFormControl','required')">
-                  Product Description {{"user.form_validations.is_required" | translate}}
+                  {{"admin.productform.product_description" | translate}}
+                  {{"admin.productform_validations.is_required" | translate}}
                 </mat-error>
               </mat-form-field>
             </td>
@@ -136,7 +144,7 @@
           <tr>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Image URL</mat-label>
+                <mat-label>{{"admin.productform.image_url" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   required
@@ -145,13 +153,14 @@
                   formControlName="productImage1FormControl"
                 />
                 <mat-error *ngIf="hasError('productImage1FormControl','required')">
-                  Image {{"user.form_validations.is_required" | translate}}
+                  {{"admin.productform.image_url" | translate}}
+                  {{"user.form_validations.is_required" | translate}}
                 </mat-error>
               </mat-form-field>
             </td>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Image URL-2</mat-label>
+                <mat-label>{{"admin.productform.image_url_2" | translate}}</mat-label>
                 <input
                   autocomplete="off"
                   [(ngModel)]="productdata.image1"
@@ -162,7 +171,7 @@
             </td>
             <td>
               <mat-form-field appearance="outline">
-                <mat-label>Image URL-3</mat-label>
+                <mat-label>{{"admin.productform.image_url_3" | translate}}</mat-label>
                 <input
                   [(ngModel)]="productdata.image2"
                   autocomplete="off"
@@ -177,13 +186,12 @@
     </mat-card-content>
   </mat-card>
 </div>
-<mat-toolbar color="primary" class="edit-footer">
-  <button mat-raised-button [disabled]="updateproductform.invalid" (click)="AddProduct()">
-    Save
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right">
+  <button id="btnSave" mat-flat-button (click)="AddProduct()">
+    {{"admin.productform.save" | translate}}
   </button>
-  &nbsp; &nbsp; &nbsp; &nbsp;
-
-  <button mat-raised-button (click)="cancel()" color="warn">
-    Cancel
+  &nbsp;&nbsp;
+  <button id="btnCancel" mat-flat-button (click)="cancel()" color="warn">
+    {{"admin.productform.cancel" | translate}}
   </button>
 </mat-toolbar>
