--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -192,11 +192,11 @@
   </mat-table>
 </div>
 <br />
-<mat-card class="table-bottom">
+<mat-card class="total-card">
   {{"user.cart.total_price" | translate}} : Rs 8000
 </mat-card>
 <br /><br />
-<div class="table-bottom">
+<!-- <div class="table-bottom">
   <button mat-raised-button style="width: 40%;" [routerLink]="['/home']" color="primary">
     {{"user.cart.continue_shopping" | translate}}
   </button>
@@ -204,6 +204,13 @@
   <button mat-raised-button style="width: 40%;" [routerLink]="['/checkout/#']" color="warn">
     {{"user.cart.checkout" | translate}}
   </button>
-</div>
-<br /><br />
-<app-footer></app-footer>
+</div> -->
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right table-bottom">
+  <button mat-raised-button style="width: 20%;" [routerLink]="['/home']">
+    {{"user.cart.continue_shopping" | translate}}
+  </button>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <button mat-raised-button style="width: 20%;" [routerLink]="['/checkout/#']" color="warn">
+    {{"user.cart.checkout" | translate}}
+  </button>
+</mat-toolbar>
