--- a/src/app/features/user-management/profile/buy-list/buy-list.component.scss
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.scss
@@ -22,6 +22,7 @@
         box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.3), 0 1px 1px 0 rgba(0, 0, 0, 0.24),
           0 1px 3px 0 rgba(0, 0, 0, 0.22);
         margin-bottom: 10px;
+        background-color: whitesmoke;
       }
       .todo {
         display: flex;
