--- a/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
+++ b/src/app/features/user-management/profile/edit-profile/edit-profile.component.html
@@ -21,7 +21,6 @@
 <div class="edit-container">
   <mat-card class="edit-profile-card">
     <mat-card-title>{{"user.form_heading.edit_profile_details" | translate}}</mat-card-title>
-    <br />
     <mat-card-content>
       <form [formGroup]="editform">
         <mat-form-field appearance="outline">
@@ -70,13 +69,13 @@
       </div>
     </div> -->
 </div>
-<mat-toolbar color="primary" class="edit-footer">
-  <button mat-raised-button [disabled]="editform.invalid" (click)="save()">
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right">
+  <button id="btnSave" mat-flat-button (click)="save()">
     {{"user.form.save" | translate}}
   </button>
-  &nbsp; &nbsp; &nbsp; &nbsp;
-
-  <button mat-raised-button (click)="cancel()" color="warn">
+  &nbsp;&nbsp;
+  <button id="btnCancel" mat-flat-button (click)="cancel()" color="warn">
     {{"user.form.cancel" | translate}}
   </button>
 </mat-toolbar>
+
