--- a/src/app/features/user-management/wish-list/wish-list.component.html
+++ b/src/app/features/user-management/wish-list/wish-list.component.html
@@ -64,7 +64,7 @@
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 </div>
-<br /><br /><br /><br />
+<!-- <br /><br /><br /><br />
 <div class="table-bottom">
   <button mat-raised-button style="width: 40%;" [routerLink]="['/home']" color="primary">
     {{"user.cart.continue_shopping" | translate}}
@@ -73,6 +73,13 @@
   <button mat-raised-button style="width: 40%;" [routerLink]="['/cart']" color="warn">
     {{"user.cart.go_to_cart" | translate}}
   </button>
-</div>
-<br /><br /><br /><br />
-<app-footer></app-footer>
+</div> -->
+<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right table-bottom">
+  <button mat-raised-button style="width: 20%;" [routerLink]="['/home']">
+    {{"user.cart.continue_shopping" | translate}}
+  </button>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <button mat-raised-button style="width: 20%;" [routerLink]="['/cart']" color="warn">
+    {{"user.cart.go_to_cart" | translate}}
+  </button>
+</mat-toolbar>
