--- a/src/app/shared/list-products/list-products.component.html
+++ b/src/app/shared/list-products/list-products.component.html
@@ -1,7 +1,7 @@
 <div class="containerr">
   <div class="product-list">
     <div class="roww">
-      <div class="three six" *ngFor="let item of productitems">
+      <div class="three six" *ngFor="let item of productitems index as i">
         <mat-card class="product-card">
           <mat-card-header>
             <mat-card-title
@@ -12,7 +12,7 @@
           </mat-card-header>
           <mat-card-content>
             <div class="product-img">
-              <img (click)="openBottomSheet(item)" src="{{ item.image }}" />
+              <img (click)="openBottomSheet(item)" src="{{ item.image[0].imageurl }}" />
             </div>
             <div class="product-bottom">
               <div class="product-name">{{ item.name }}</div>
