--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       style="height:22px"
       src="../../../assets/images/shopx-logo-white.png"
     />
-    <div class="search-bar" [hidden]="isHidden || isAdmin">
+    <div class="search-bar" id="mainsearch" [hidden]="isHidden || isAdmin">
       <mat-form-field appearance="outline">
         <input autocomplete="off" matInput />
         <mat-icon matSuffix class="search-icon">search</mat-icon>
