--- a/src/app/shared/quickview/quickview.component.scss
+++ b/src/app/shared/quickview/quickview.component.scss
@@ -5,7 +5,6 @@
   margin-top: -45px;
   padding-left: 15px;
   min-width: 1050px;
-
   .mat-form-field {
     width: 95%;
   }
@@ -13,7 +12,11 @@
 .info-container {
   max-height: 395px !important;
 }
-
+.action {
+  position: relative;
+  top: 30%;
+  // left: 10%;
+}
 .preview {
   display: -webkit-box;
   display: -webkit-flex;
@@ -41,8 +44,8 @@
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
-  height: 300px;
-  width: 450px;
+  height: 350px;
+  width: 480px;
 }
 .nav {
   display: flex;
@@ -53,7 +56,9 @@
 }
 .preview-thumbnail.nav-tabs {
   border: none;
-  margin-top: 15px;
+  top: 5%;
+  left: 25%;
+  position: relative;
 }
 
 .preview-thumbnail.nav-tabs li {
@@ -64,6 +69,7 @@
 .preview-thumbnail.nav-tabs li img {
   max-width: 100%;
   display: block;
+  height: 100px;
 }
 
 .preview-thumbnail.nav-tabs li a {
@@ -80,7 +86,8 @@
 }
 
 .tab-content img {
-  width: 100%;
+  // width: 100%;
+  height: 350px;
   -webkit-animation-name: opacity;
   animation-name: opacity;
   -webkit-animation-duration: 0.3s;
