--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@
   height: 100%;
   height: 704px;
 }
+.list-product-style {
+  overflow: hidden !important;
+  min-height: 900px;
+}
 .mat-button-focus-overlay {
   background-color: transparent !important;
 }
